# llm_tester

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LLM_Test_Generator.postman_collection.json  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: files.py  generate.py  grade.py  health.py  import_exam.py
app/core/: evaluator.py  exam_builder.py  generator.py  grader.py  parser.py  prompt_comparator.py  research_metrics.py  research_runner.py  retriever.py  synthetic_students.py  validator.py
app/models/: schemas.py
app/prompts/: prompts_en.py  prompts_ru.py  registry.py
app/services/: llm_provider.py  openai_client.py  yandex_client.py
app/utils/: path.py  pdf.py  preprocess.py
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CHANGELOG_SHORT.md  CONTRIBUTING.md  EVALUATION.md  FRONTEND.md  INDEX.md  PROJECT_STATUS.md  QUICK_START.md  RESEARCH_DECK.md  SCRIPTS_GUIDE.md  SOLUTION.md  openapi.json
docs/api/: LLM_Test_Generator.postman_collection.json
docs/archive/: PLAN.md  RESEARCH_RESULTS.md  security_report.json
examples/: complete_workflow.py  test_open_ended_api.sh
examples/notebooks/: 01_question_generation.py  02_model_evaluation.py  GETTING_STARTED.txt  README.md  question_generation_examples.ipynb
examples/sample_data/: sample_clustering.md
scripts/: _utils.py  evaluate_models.py  preprocess_materials.py  test_model_answers.py
static/: index.html
static/css/: style.css
static/js/: api-client.js  main.js  (+4 more)
tests/: utils.py
(+29 files in other folders)
